<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registracija_fizicki"
    tools:context="com.coky.app.RegistracijaFizickiKorisnik"
    android:fillViewport = "true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="0dp">

        <EditText
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/editOibRF"
        android:layout_alignStart="@+id/editOibRF"
        android:id="@+id/editGradRF"
        android:paddingBottom="18dp"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/irgrad"
        android:layout_centerHorizontal="true"/>

        <EditText

        android:layout_below="@+id/editKontaktRF"
        android:layout_alignEnd="@+id/editKontaktRF"
        android:id="@+id/editImeRF"
        android:paddingBottom="18dp"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/irime"
        android:layout_alignStart="@+id/editNazivRP"/>

    <EditText
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editAdresaRF"
        android:layout_below="@+id/editGradRF"
        android:layout_alignStart="@+id/editGradRF"
        android:paddingBottom="18dp"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/iradresa"
        android:layout_centerHorizontal="true" />

    <EditText

        android:id="@+id/editKontaktRF"
        android:layout_below="@+id/editAdresaRF"
        android:layout_alignStart="@+id/editAdresaRF"
        android:paddingBottom="18dp"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/irkontakt"
        android:layout_centerHorizontal="true"/>


        <EditText
        android:paddingBottom="18dp"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editMailRF"
        android:inputType="textEmailAddress"
        android:hint="@string/irmail"
        android:fontFamily="sans-serif"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

        <EditText
        android:layout_width="300dp"
        android:paddingBottom="18dp"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/irloz"
        android:fontFamily="sans-serif"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:id="@+id/editLozinkaRF"
        android:layout_below="@+id/editMailRF"
        android:layout_alignStart="@+id/editMailRF" />

        <EditText

        android:layout_below="@+id/editImeRF"
        android:layout_alignStart="@+id/editImeRF"
        android:id="@+id/editPrezimeRF"
        android:paddingBottom="25dp"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/irprezime"
        android:layout_centerHorizontal="true" />

    <EditText
        android:ems="10"
        android:id="@+id/editPonovljenaRF"
        android:layout_below="@+id/editLozinkaRF"
        android:layout_alignStart="@+id/editLozinkaRF"
        android:paddingBottom="18dp"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/irloz2"
        android:fontFamily="sans-serif"
        android:layout_centerHorizontal="true"/>

        <EditText
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editOibRF"
            android:paddingBottom="18dp"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/iroib"
            android:layout_below="@+id/editPonovljenaRF"
            android:layout_alignStart="@+id/editPonovljenaRF" />

        <Button
            android:text="Registriraj se"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRegistrirajSeRF"
            android:background="@android:drawable/btn_default_small"
            tools:background="@android:drawable/btn_default"
            android:layout_below="@+id/editPrezimeRF"
            android:layout_marginTop="8dp"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/editPrezimeRF" />

        <Button
        android:text="Odustani"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonOdustaniRF"
        android:background="@android:drawable/btn_default_small"
        tools:background="@android:drawable/btn_default"
            android:layout_marginBottom="25dp"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/buttonRegistrirajSeRF"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</ScrollView>
